--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.15)
-project (hate_cpp CXX)
+project(Hate_cpp CXX)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(CMAKE_CXX_STANDARD 23)
 
 find_package(ZLIB REQUIRED)
 find_package(uwebsockets REQUIRED)
