--- a/standalone/CMakeLists.txt
+++ b/standalone/CMakeLists.txt
@@ -1,9 +1,6 @@
 cmake_minimum_required(VERSION 3.15)
-project (hate_cpp_test CXX)
+project(Hate_cpp_standalone CXX)
 
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-
-find_package(GTest REQUIRED)
+set(CMAKE_CXX_STANDARD 23)
 
 add_executable(${PROJECT_NAME} main.cpp)
-target_link_libraries(${PROJECT_NAME} PRIVATE gtest::gtest)
