--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.15)
 project (Hate_cpp_benchmark CXX)
 
+set(CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/../build")
+
 find_package(benchmark REQUIRED)
 
 add_executable(${PROJECT_NAME} main.cpp)
